Dark Mode FTW! Fixes #11 (#22)

--- a/assets/css/general/basics.css
+++ b/assets/css/general/basics.css
@@ -8,6 +8,7 @@
     --mid-gray-color: #ccc;
     --dark-gray-color: #444;
     --darker-gray-color: #1a1a1a;
+    --sub-menu-text-color: var(--white-color);
     --black-color: #000;
     --green-color: #28a745;
     --orange-color: #ffc107;
@@ -19,6 +20,15 @@
     --font-base: Mulish, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
     --font-serif: Lora, Times, serif;
     --navbar-height: 80px;
+}
+
+html.dark {
+    --dark-gray-color: #d5d5d5;
+    --darker-gray-color: #fff;
+    --sub-menu-text-color: var(--lighter-gray-color);
+    --primary-text-color: #e1e1e1;
+    --lighter-gray-color: #2c2c2c;
+    --light-gray-color: #3c3c3c;
 }
 
 @media (max-width: 767px) {
